--- a/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Share.css
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Share.css
@@ -1,7 +1,7 @@
 .share {
     background-color: white;
     width: 100%;
-    height: 170px;
+    
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
@@ -15,7 +15,17 @@
     display: flex;
     align-items: center;
   }
-  
+  .sharePom
+  {
+    display:flex;
+    flex-direction:column;
+    width: 100%;
+  }
+  .shareSlika
+  {
+    width:200px;
+    height: 200px;
+  }
   .shareProfileImg {
     width: 50px;
     height: 50px;
