--- a/ProjekatBaze (1)/ProjekatBaze/findme/src/stranice/Profil/Profil.css
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/src/stranice/Profil/Profil.css
@@ -72,3 +72,15 @@
     display: flex;
     flex-direction: column;
 }
+.divDugmiciIzmeniSlike
+{
+    display:flex;
+    
+    margin-bottom: 10px; 
+}
+.btnProfil
+{
+    margin: 20px;
+    width: 99%;
+    background-color: rgb(167, 159, 159);
+}
