--- a/ProjekatBaze (1)/ProjekatBaze/findme/src/stranice/Profil/Profil.css
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/src/stranice/Profil/Profil.css
@@ -72,15 +72,18 @@
     display: flex;
     flex-direction: column;
 }
+.divBtnsProfil
+{
+    display: flex;
+}
 .divDugmiciIzmeniSlike
 {
     display:flex;
-    
     margin-bottom: 10px; 
 }
 .btnProfil
 {
     margin: 20px;
-    width: 99%;
+    width: 25%;
     background-color: rgb(167, 159, 159);
 }
