--- a/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Post.css
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Post.css
@@ -1,12 +1,13 @@
 .post {
     background-color: white;
-    width: 98%;
+    width: 90%;
     border-radius: 10px;
     -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     margin: 30px 0;
     display: flex;
     flex-direction: column;
+    align-self: center;
   }
   
   .postWrapper {
@@ -49,7 +50,7 @@
   
   .postImg{
       margin-top: 20px;
-      width: 80%;
+      width:100%;
       height: 10cm;
       max-height: 500px;
       object-fit: contain;
@@ -75,6 +76,7 @@
   
   .postLikeCounter{
       font-size: 15px;
+      cursor:pointer;
   }
   
   .postCommentText{
@@ -82,3 +84,65 @@
       border-bottom: 1px dashed gray;
       font-size: 15px;
   }
+
+  .komentarisi{
+    display: flex;
+    justify-content: end;
+    
+  }
+
+  .commentButton{
+    
+      height:30px;
+      border:none;
+      border-radius: 3px;
+    
+  }
+
+  .commentInput{
+    width: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+  .youLike{
+    margin-right: 10px;
+    font-style: italic;
+  }
+
+ .likeIcon:hover{
+   cursor:pointer;
+   color:blue;
+   
+ }
+
+ .likeIkonica{
+
+  width: 60px;
+  height: 60px;
+  margin-right: 30px;
+  margin-bottom: 14px;
+  margin-left: 30px;
+
+ }
+ .likeUsername{
+   font-family: Arial, Helvetica, sans-serif;
+   font-weight:bold;
+   margin-bottom: 14px;
+ }
+
+ .okLikeButton{
+   border-radius: 10px;
+   border:none;
+   color: blue;
+   padding:15px;
+   margin:auto;
+   display: block;
+   width:15%;
+   margin-bottom: 10px;
+ }
+ h4{
+   display: block;
+   text-align: center;
+   margin:auto;
+   margin-top: 10px;
+ }
