--- a/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Topbar.css
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Topbar.css
@@ -136,7 +136,7 @@ topbarContainerGlavni
     padding: 5px;
    align-items: center;
   }
-  .divPratilacGlavni
+  .divPratilacGlavnii
 {
     display: flex;
     width:100%;
