--- a/ProjekatBaze (1)/ProjekatBaze/findme/src/stranice/Informacije/Informacije.css
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/src/stranice/Informacije/Informacije.css
@@ -2,7 +2,7 @@
 {
     display: flex;
     width:100%;
-    height: 90vh;
+    height: 110vh;
     background-color:rgb(241, 234, 234);
     padding: 20px;
 
@@ -14,16 +14,38 @@
     flex-direction: column;
     width: 33%;
     padding-left: 0.7cm;
+    
 }
 .profilnaInfo
 {
     width: 200px;
     height: 200px;
+    margin-bottom: 20px;
 }
 .lblInfo{
     margin-bottom: 0.9cm;
+    display: flex;
+    justify-content: space-between;
 }
 .lbllInfo
 {
     margin-bottom: 0.7cm;
+}
+.infoInput
+{
+
+    width: 20px; 
+    
+    margin-right: 1cm;
+}
+.dugmeInformacije
+{
+    width: 150px;
+}
+.divDugmeInfo
+{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
