--- a/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Topbar.css
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Topbar.css
@@ -153,3 +153,26 @@ topbarContainerGlavni
     border-radius: 50%;
     object-fit: cover;
 }
+
+.notifikacije{
+  max-height: 400px;
+  border-bottom: 1px solid rgb(212, 210, 210);
+  width:250px;
+  
+
+}
+.oznaci{
+  background-color: rgb(83, 83, 168);
+  padding: 10px;
+  text-align: center;
+  border-radius: 7px;
+  
+}
+.oznaci:hover{
+  background-color:rgb(125, 125, 211);
+}
+
+.unread{
+  background-color: yellow !important;
+}
+
