--- a/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Topbar.css
+++ b/ProjekatBaze (1)/ProjekatBaze/findme/src/components/Topbar.css
@@ -152,6 +152,10 @@ topbarContainerGlavni
     height: 30px;
     border-radius: 50%;
     object-fit: cover;
+    cursor: pointer;
+}
+.lblPratilac{
+  cursor:pointer;
 }
 
 .notifikacije{
